add gunicorn to requirements.txt fix modal for timesheet entry

--- a/templates/timesheet/entry.html
+++ b/templates/timesheet/entry.html
@@ -898,8 +898,8 @@
                     attachDeleteEvent(timeEntryDiv.querySelector('.delete-entry-btn'));
 
                     // Close the modal
-                    const addTimeModal = bootstrap.Modal.getInstance(document.getElementById('addTimeModal'));
-                    addTimeModal.hide();
+                    // const addTimeModal = bootstrap.Modal.getInstance(document.getElementById('addTimeModal'));
+                    // addTimeModal.hide();
 
                     // alert('Time entry added successfully.');
                 } else {
