--- a/static/style.css
+++ b/static/style.css
@@ -628,16 +628,10 @@ a { color: #009FAA; }
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-
-
 #snackbar {
     visibility: hidden;
     min-width: 250px;
     margin-left: -125px;
-    /* background-color: #333; */
-    /* color: #fff; */
-    background-color: #009FAA; /* Match the primary color */
-    color: #212529; /* White text on hover */
     text-align: center;
     border-radius: 2px;
     padding: 16px;
@@ -646,11 +640,34 @@ a { color: #009FAA; }
     left: 50%;
     top: 16px; /* Position it above the modal */
     font-size: 18px;
+    color: #fff; /* Default text color */
 }
 
 #snackbar.show {
     visibility: visible;
-    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 5s;
+}
+
+/* Success notification */
+#snackbar.success {
+    /* background-color: #28a745; Green for success */
+    background-color: #009FAA; /* Darker shade for the selected item */
+    color: #212529;
+}
+
+/* Error notification */
+#snackbar.error {
+    background-color: #dc3545; /* Red for error */
+}
+
+/* Warning notification */
+#snackbar.warning {
+    background-color: #ffc107; /* Yellow for warning */
+}
+
+/* Info notification */
+#snackbar.info {
+    background-color: #17a2b8; /* Blue for info */
 }
 
 @keyframes fadein {
